--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
-google-cloud-firestore==1.6.2
 pytest>=5.4.1
-pytest
-google-cloud
-google-api-core
-google-cloud-bigquery==1.15.0
-
-google-cloud-kms==1.1.0
-google-cloud-pubsub==0.42.1
-google-cloud-storage==1.16.1
+google-api-python-client==1.7.11
+google-cloud-firestore==1.6.2
+git+https://git@github.com/perrystallings/api-framework.git
