--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 pytest>=5.4.1
 google-api-python-client==1.7.11
 google-cloud-firestore==1.6.2
-git+https://git@github.com/perrystallings/api-framework.git
+stratus-api-core>=0.0.6
